# bootstrap-predictor

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: quick_start.py
src/bootstrap_predictor/: __init__.py  predictor.py  viz.py
tests/: test_predictor.py
